log
Sun 02 Jul 2023 03:32:53 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
f91a692
Sun 02 Jul 2023 03:33:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
015e370
Sun 02 Jul 2023 03:33:27 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
94eb630
Sun 02 Jul 2023 03:33:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
f920798
Sun 02 Jul 2023 03:33:58 AM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:66:23: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
   66 |    long indice = hash(key, map -> capacity);
      |                       ^~~
      |                       key_t
hashmap.c:66:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:66:28: error: ‘map’ undeclared (first use in this function)
   66 |    long indice = hash(key, map -> capacity);
      |                            ^~~
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3147778
Sun 02 Jul 2023 03:35:01 AM UTC: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e32b43f
Sun 02 Jul 2023 03:35:21 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
95b1b84
Sun 02 Jul 2023 03:35:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
da84405
Sun 02 Jul 2023 03:36:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
aa1dc89
Sun 02 Jul 2023 03:37:26 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
233a9a4
Sun 02 Jul 2023 03:37:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
970c4d7
Sun 02 Jul 2023 03:37:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
954fe8e
Sun 02 Jul 2023 03:37:58 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
b069ff0
Sun 02 Jul 2023 03:38:05 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
285da71
Sun 02 Jul 2023 03:38:55 AM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
870afa9
Sun 02 Jul 2023 03:39:22 AM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  6|3
total_score: 40/70
517382b
Sun 02 Jul 2023 03:39:28 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
a27a49f
Sun 02 Jul 2023 03:41:03 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
30fda77
Sun 02 Jul 2023 03:41:56 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|1
total_score: 60/70
760b03e
